# prime-agent

./: .gitignore  AGENTS.md  Cargo.toml  README.md  agents.d.ts  agents.ts  context.test.ts  context.ts  dev  get.ts  go.mod  go.sum  index.ts  install.sh  kick-off.ts  link  main.go  main_test.go  package-lock.json  package.json  phase-7.test.ts  phase-7.ts  playwright.config.ts  playwright.live.config.ts  pr.test.ts  pr.ts  prime-agent-config.test.ts  prime-agent-config.ts  question.test.ts  question.ts  review.ts  run-wait.test.ts  run-wait.ts  sessions.test.ts  sessions.ts  take-over.ts  title  tsconfig.json  wait.test.ts  wait.ts
.agents/skills/prime-planning/: SKILL.md
.cursor/rules/prime-planning/: SKILL.md
.cursor/rules/prime-review/: SKILL.md
internal/db/: db.go  db_test.go
internal/web/: handlers.go  handlers_test.go
phases/: 001.md  002.md  003.md  004.md  005.md  006.md  007.md
src/: agents_md.rs  cli.rs  config.rs  counter.rs  data_dir.rs  dot_prime_agent_config.rs  generation.rs  idle_commit.rs  live_reload.rs  main.rs  pipeline_pick.rs  pipeline_progress.rs  pipeline_run.rs  pipeline_store.rs  pipeline_tui.rs  pipeline_ui_state.rs  serve.rs  skills_store.rs  stdout_tail.rs  sync.rs
src/web/: handlers.rs  mod.rs  render.rs  script.inc  ws_protocol.rs
templates/: page_raw.html
tests/: clear.rs  cli.rs  config.rs  cursor_pipeline_live.rs  delete.rs  get.rs  help.rs  list.rs  local.rs  pipelines.rs  pipelines_e2e.rs  set.rs  sync.rs
tests/common/: mod.rs
tests/e2e/: fixtures-live.ts  fixtures.ts  live-reload-disabled.spec.ts  sad-no-autoreload.spec.ts  skill-autosave-disk.spec.ts  website.spec.ts
tests/e2e/helpers/: prime-window.ts  ui-broadcast-types.ts  ws-client.ts  ws-payloads.ts
tests/e2e/live/: autosave-no-reload-loop.spec.ts  bidirectional-pipelines.spec.ts  bidirectional-skills.spec.ts  disk-delete-reconcile.spec.ts  editor-scroll-ui.spec.ts  fs-notify-reload.spec.ts  http-broadcast-reload.spec.ts  pipeline-create-ui.spec.ts  pipeline-fs-reload.spec.ts  sad-live-reload.spec.ts  sidebar-visibility.spec.ts
web/templates/: index.templ  index_templ.go
